# lc-admin-backend

./: .dockerignore  .env.example  .gitignore  BRUTE_FORCE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-security.yml
app/: main.py
app/api/routes/: admin.py  auth.py  seller.py
app/core/: config.py
app/schemas/: auth.py  store.py
app/security/: admin_auth.py  headers.py  password_utils.py
app/services/: bigquery_admin.py  card_catalog.py  catalog_assistant.py  firestore_admin.py  lot_import.py  media_storage.py  mercadopago_admin.py  seller_accounts.py
exports/: Anunciar-04-25-13_27_54.backup-prepatch-20260425-143333.xlsx  Anunciar-04-25-13_27_54.xlsx  _ml_cards_rows_latest.json
scripts/: backfill_product_fields.py  generate_mercadolivre_cards_xlsx.py  migrate_accessory_categories.py  upsert_equilibrio_perfeito_products.py  upsert_mercadolivre_accessories.py
tests/: test_admin_auth.py  test_admin_seller_status_routes.py  test_admin_settings_branding_routes.py  test_admin_upload_routes.py  test_catalog_assistant_routes.py  test_lot_import_finish_mapping.py  test_lot_import_number_reference.py  test_lot_import_routes.py  test_sales_order_processing.py  test_sales_webhook_routes.py  test_security_headers.py  test_seller_publish_flow.py
